--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -19,3 +19,7 @@
     text-align: center;
     border-bottom: 2px solid rgba(206, 212, 218, 80%);
 }
+
+.message-input:hover {
+    background-color: rgba(206, 212, 218, 15%);
+}
