--- a/src/styles/response_card.css
+++ b/src/styles/response_card.css
@@ -20,8 +20,8 @@
     background-color: #A5A6F6;
     color: white;
     /*position: absolute;*/
-    width: 59px;
-    height: 57px;
+    /*width: 59px;*/
+    /*height: 57px;*/
     /*
     border: 5px solid #7D7D7D;
     box-sizing: border-box;
